Applying to the firefox vertical align fix to the border in projects

--- a/css/main.css
+++ b/css/main.css
@@ -1159,6 +1159,7 @@ display: block;
   width: 50px;
   height:100vh;
   z-index:10;
+  vertical-align: top;
 }
 
 .gallery{
